--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -108,7 +108,7 @@ body {
 
 /* All section titles: */
 
-[class*="__title"] {
+[class*="__title"][class*="home-"] {
 	margin-bottom: .5em;
 	margin-top: 1em;
 	font-family: "Raleway", sans-serif;
