Create basic styles for nav

--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -52,6 +52,27 @@
   font-size: 3em;
   background-image: linear-gradient(to bottom, lightpink, white); }
 
+.nav-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 100%;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
+  z-index: 5; }
+
+.nav__arrow {
+  position: relative;
+  display: inline-block;
+  height: 100%; }
+  .nav__arrow a img {
+    position: absolute;
+    height: 30px;
+    margin: 10px 0; }
+
+.nav-wrapper--scroll-up {
+  display: block; }
+
 * {
   box-sizing: border-box; }
 
