--- a/theme-testing/_sass/_nav.scss
+++ b/theme-testing/_sass/_nav.scss
@@ -3,10 +3,13 @@
 	top: 0;
 	left: 0;
 //	display: none;
-	height: 50px;
+	height: 35px;
 	width: 100%;
-	background-image: linear-gradient(to bottom, rgba(0,0,0,.7), rgba(0,0,0,.5));
+	background-image: linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,0) 100%), linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.1) 40%, rgba(0,0,0,0) 90%), linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.15) 50%, rgba(0,0,0,0) 80%);
 	z-index: 5;
+	@media screen and (min-width: 768px) {
+		height: 50px;
+	}
 }
 
 .nav__arrow {
@@ -16,9 +19,18 @@
 	a {
 		img {
 			position: absolute;
-			height: 30px;
-			margin: 10px 0;
+			height: 15px;
+			margin-top: 7.5px;
 
+		}
+	}
+	@media screen and (min-width: 768px) {
+		a {
+			img {
+				height: 20px;
+				margin-top: 10px;
+
+			}
 		}
 	}
 }
