--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -56,10 +56,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 50px;
+  height: 35px;
   width: 100%;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0) 100%), linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 90%), linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.15) 50%, rgba(0, 0, 0, 0) 80%);
   z-index: 5; }
+  @media screen and (min-width: 768px) {
+    .nav-wrapper {
+      height: 50px; } }
 
 .nav__arrow {
   position: relative;
@@ -67,8 +70,12 @@
   height: 100%; }
   .nav__arrow a img {
     position: absolute;
-    height: 30px;
-    margin: 10px 0; }
+    height: 15px;
+    margin-top: 7.5px; }
+  @media screen and (min-width: 768px) {
+    .nav__arrow a img {
+      height: 20px;
+      margin-top: 10px; } }
 
 .nav-wrapper--scroll-up {
   display: block; }
