--- a/theme-testing/_sass/_nav.scss
+++ b/theme-testing/_sass/_nav.scss
@@ -3,8 +3,12 @@
 	top: 0;
 	left: 0;
 //	display: none;
+	
+	display: flex;
+	justify-content: space-between;
 	height: 35px;
 	width: 100%;
+	padding: 0 .5rem 0 .25rem;
 	background-image: linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,0) 100%), linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.1) 40%, rgba(0,0,0,0) 90%), linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.15) 50%, rgba(0,0,0,0) 80%);
 	z-index: 5;
 	@media screen and (min-width: 768px) {
@@ -12,13 +16,19 @@
 	}
 }
 
-.nav__arrow {
+
+.nav-wrapper--scroll-up {
+	display: flex;
+	justify-content: space-between;
+}
+
+[class*="nav__arrow"] {
 	position: relative;
 	display: inline-block;
 	height: 100%;
 	a {
 		img {
-			position: absolute;
+		//	position: absolute;
 			height: 15px;
 			margin-top: 7.5px;
 
@@ -35,6 +45,11 @@
 	}
 }
 
-.nav-wrapper--scroll-up {
-	display: block;
+.nav__arrow--top {
+	a {
+		img {
+			transform: rotate(90deg);
+			opacity: .7;
+		}
+	}
 }
