--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -56,29 +56,36 @@
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: space-between;
   height: 35px;
   width: 100%;
+  padding: 0 .5rem 0 .25rem;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0) 100%), linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 90%), linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.15) 50%, rgba(0, 0, 0, 0) 80%);
   z-index: 5; }
   @media screen and (min-width: 768px) {
     .nav-wrapper {
       height: 50px; } }
 
-.nav__arrow {
+.nav-wrapper--scroll-up {
+  display: flex;
+  justify-content: space-between; }
+
+[class*="nav__arrow"] {
   position: relative;
   display: inline-block;
   height: 100%; }
-  .nav__arrow a img {
-    position: absolute;
+  [class*="nav__arrow"] a img {
     height: 15px;
     margin-top: 7.5px; }
   @media screen and (min-width: 768px) {
-    .nav__arrow a img {
+    [class*="nav__arrow"] a img {
       height: 20px;
       margin-top: 10px; } }
 
-.nav-wrapper--scroll-up {
-  display: block; }
+.nav__arrow--top a img {
+  transform: rotate(90deg);
+  opacity: .7; }
 
 * {
   box-sizing: border-box; }
