--- a/theme-testing/_sass/_nav.scss
+++ b/theme-testing/_sass/_nav.scss
@@ -2,8 +2,6 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-//	display: none;
-	
 	display: flex;
 	justify-content: space-between;
 	height: 35px;
@@ -11,6 +9,8 @@
 	padding: 0 .5rem 0 .25rem;
 	background-image: linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,0) 100%), linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.1) 40%, rgba(0,0,0,0) 90%), linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.15) 50%, rgba(0,0,0,0) 80%);
 	z-index: 5;
+	transform: translateY(-100%);
+	transition: transform .2s ease-out .3s;
 	@media screen and (min-width: 768px) {
 		height: 50px;
 	}
@@ -18,8 +18,7 @@
 
 
 .nav-wrapper--scroll-up {
-	display: flex;
-	justify-content: space-between;
+	transform: translateY(0);
 }
 
 [class*="nav__arrow"] {
