--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -62,14 +62,15 @@
   width: 100%;
   padding: 0 .5rem 0 .25rem;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0) 100%), linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 90%), linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.15) 50%, rgba(0, 0, 0, 0) 80%);
-  z-index: 5; }
+  z-index: 5;
+  transform: translateY(-100%);
+  transition: transform .2s ease-out .3s; }
   @media screen and (min-width: 768px) {
     .nav-wrapper {
       height: 50px; } }
 
 .nav-wrapper--scroll-up {
-  display: flex;
-  justify-content: space-between; }
+  transform: translateY(0); }
 
 [class*="nav__arrow"] {
   position: relative;
