--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -34,6 +34,100 @@
   transform: rotate(90deg);
   opacity: .7; }
 
+/* If make into own for page:
+
+.home-makerspace__hours {
+	position: relative;
+	border: 4px solid magenta;
+	font-family: "base-mono-narrow", monospace;
+	font-size: 20px;
+	text-align: right;
+	margin-top: calc(2em + 4px);
+	padding: .5em 1em;
+	div {
+		position: absolute;
+		font-family: "Oswald", sans-serif;
+		font-size: 1.5rem;
+		font-weight: 600;
+		text-transform: uppercase;
+		text-align: left;
+		line-height: 1;
+		transform: translate(-1em, calc(-1.5em - 4px));
+	}
+	span {
+		float: left;
+		color: magenta;
+	}
+}
+
+*/
+.makerspace-landing-grid {
+  position: relative;
+  display: grid;
+  grid-template-areas: "title title" "..... pics";
+  grid-template-columns: 2fr 1fr;
+  grid-auto-rows: minmax(100vh, auto);
+  align-items: center;
+  width: 100%;
+  padding-left: 4.167%;
+  margin-bottom: 50px;
+  background-color: black; }
+  @media screen and (min-width: 600px) {
+    .makerspace-landing-grid {
+      padding-left: 8.33%; } }
+  @media screen and (min-width: 1200px) {
+    .makerspace-landing-grid {
+      padding-right: 4.167%; } }
+
+.maker-landing__text {
+  grid-area: title;
+  align-self: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 40vh;
+  font-family: "Oswald", sans-serif;
+  font-size: 4rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: .9;
+  color: white; }
+  @media screen and (min-width: 600px) {
+    .maker-landing__text {
+      font-size: 5rem; } }
+  @media screen and (min-width: 768px) {
+    .maker-landing__text {
+      font-size: 6rem; } }
+  @media screen and (min-width: 1024px) {
+    .maker-landing__text {
+      font-size: 7rem; } }
+
+.maker-landing__pics {
+  grid-area: pics;
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+  align-items: flex-start;
+  transform: translateY(50px); }
+  .maker-landing__pics img {
+    display: inline-block;
+    max-width: 90%; }
+    .maker-landing__pics img:nth-of-type(2) {
+      align-self: flex-end; }
+
+/* Main Content: */
+[class*="__title"][class*="maker-"] {
+  margin-bottom: .5em;
+  margin-top: 1em;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.75rem;
+  font-weight: 900;
+  line-height: 1;
+  text-transform: uppercase; }
+  @media screen and (min-width: 600px) {
+    [class*="__title"][class*="maker-"] {
+      font-size: 2rem; } }
+
 * {
   box-sizing: border-box; }
 
@@ -112,7 +206,7 @@ body {
 
 /****************** 1. Default Styles: *******************/
 /* All section titles: */
-[class*="__title"] {
+[class*="__title"][class*="home-"] {
   margin-bottom: .5em;
   margin-top: 1em;
   font-family: "Raleway", sans-serif;
@@ -121,7 +215,7 @@ body {
   line-height: 1;
   text-transform: uppercase; }
   @media screen and (min-width: 600px) {
-    [class*="__title"] {
+    [class*="__title"][class*="home-"] {
       font-size: 2rem; } }
 
 /* All homepage links: */
