Add Python-gen'd CSS skeleton to SCSS partial

--- a/theme-testing/_sass/_makerspace.scss
+++ b/theme-testing/_sass/_makerspace.scss
@@ -53,7 +53,7 @@
 	align-self: center;
 	position: -webkit-sticky;
 	position: sticky;
-	top: 40vh;
+	top: 50vh;
 	font-family: "Oswald", sans-serif;
 	font-size: 4rem;
 	font-weight: 600;
@@ -102,4 +102,118 @@
 	@media screen and (min-width: 600px) {
 		font-size: 2rem;
 	}
+}
+
+/* Made with file-text-search.py: */
+
+.maker-landing__big-title {
+
+}
+
+.maker-title__text {
+
+}
+
+.maker-landing__pics {
+
+}
+
+.makerspace__ethos {
+
+}
+
+.maker-ethos__title {
+
+}
+
+.maker-ethos__text {
+
+}
+
+.makerspace__hours {
+
+}
+
+.maker-hours__title {
+
+}
+
+.home-makerspace__hours {
+
+}
+
+.maker-hours__explainer {
+
+}
+
+.makerspace__people {
+
+}
+
+.maker-people__title {
+
+}
+
+.maker-people__students {
+
+}
+
+.maker-people__staff {
+
+}
+
+.makerspace__usage {
+
+}
+
+.maker-usage__title {
+
+}
+
+.maker-usage__content {
+
+}
+
+.makerspace__inventory {
+
+}
+
+.maker-inventory__title {
+
+}
+
+.maker-inventory__list {
+
+}
+
+.maker-inventory__rules {
+
+}
+
+.maker-inventory__contact {
+
+}
+
+.makerspace__public-spaces {
+
+}
+
+.maker-public__title {
+
+}
+
+.maker-public__list {
+
+}
+
+.makerspace__questions {
+
+}
+
+.maker-questions__text {
+
+}
+
+.makerspace__images {
+
 }
