--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -84,7 +84,7 @@
   align-self: center;
   position: -webkit-sticky;
   position: sticky;
-  top: 40vh;
+  top: 50vh;
   font-family: "Oswald", sans-serif;
   font-size: 4rem;
   font-weight: 600;
@@ -128,6 +128,7 @@
     [class*="__title"][class*="maker-"] {
       font-size: 2rem; } }
 
+/* Made with file-text-search.py: */
 * {
   box-sizing: border-box; }
 
