--- a/theme-testing/_sass/_makerspace.scss
+++ b/theme-testing/_sass/_makerspace.scss
@@ -107,7 +107,26 @@
 /* Made with file-text-search.py: */
 
 .maker-landing__big-title {
-
+	grid-area: title;
+	align-self: center;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 50vh;
+	font-family: "Oswald", sans-serif;
+	font-size: 4rem;
+	font-weight: 600;
+	text-transform: uppercase;
+	line-height: .9;
+	color: white;
+	@media screen and (min-width: 600px) {
+		font-size: 5rem;
+	}
+	@media screen and (min-width: 768px) {
+		font-size: 6rem;
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 7rem;
+	}
 }
 
 .maker-title__text {
@@ -215,5 +234,5 @@
 }
 
 .makerspace__images {
-
+	display: none;
 }
