--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -129,6 +129,31 @@
       font-size: 2rem; } }
 
 /* Made with file-text-search.py: */
+.maker-landing__big-title {
+  grid-area: title;
+  align-self: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 50vh;
+  font-family: "Oswald", sans-serif;
+  font-size: 4rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: .9;
+  color: white; }
+  @media screen and (min-width: 600px) {
+    .maker-landing__big-title {
+      font-size: 5rem; } }
+  @media screen and (min-width: 768px) {
+    .maker-landing__big-title {
+      font-size: 6rem; } }
+  @media screen and (min-width: 1024px) {
+    .maker-landing__big-title {
+      font-size: 7rem; } }
+
+.makerspace__images {
+  display: none; }
+
 * {
   box-sizing: border-box; }
 
