--- a/theme-testing/_sass/_makerspace.scss
+++ b/theme-testing/_sass/_makerspace.scss
@@ -1,30 +1,32 @@
-/* If make into own for page:
+/**
+ * 					Table of Contents
+ * --------------------------------------------------------------------
+ * #  Section:			Description:
+ * --------------------------------------------------------------------
+ * 1. General styles....Universal styles for repeating elements
+ * 2. Landing page......Styles for title page
+ * 3. Main content......Styles for content sections, e.g. 'Ethos'
+ * 4. Unused styles.....Copied main styles for future customizing
+ * --------------------------------------------------------------------
+ */
 
-.home-makerspace__hours {
-	position: relative;
-	border: 4px solid magenta;
-	font-family: "base-mono-narrow", monospace;
-	font-size: 20px;
-	text-align: right;
-	margin-top: calc(2em + 4px);
-	padding: .5em 1em;
-	div {
-		position: absolute;
-		font-family: "Oswald", sans-serif;
-		font-size: 1.5rem;
-		font-weight: 600;
-		text-transform: uppercase;
-		text-align: left;
-		line-height: 1;
-		transform: translate(-1em, calc(-1.5em - 4px));
-	}
-	span {
-		float: left;
-		color: magenta;
+/* 1. General Styles: */
+
+// Section Titles:
+[class*="__title"][class*="maker-"] {
+	margin-bottom: .5em;
+	margin-top: 1em;
+	font-family: "Raleway", sans-serif;
+	font-size: 1.75rem;
+	font-weight: 900;
+	line-height: 1;
+	text-transform: uppercase;
+	@media screen and (min-width: 600px) {
+		font-size: 2rem;
 	}
 }
 
-*/
+/* Landing Page: */
 
 .makerspace-landing-grid {
 	position: relative;
@@ -48,64 +50,7 @@
 	}
 }
 
-.maker-landing__text {
-	grid-area: title;
-	align-self: center;
-	position: -webkit-sticky;
-	position: sticky;
-	top: 50vh;
-	font-family: "Oswald", sans-serif;
-	font-size: 4rem;
-	font-weight: 600;
-	text-transform: uppercase;
-	line-height: .9;
-	color: white;
-	@media screen and (min-width: 600px) {
-		font-size: 5rem;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 6rem;
-	}
-	@media screen and (min-width: 1024px) {
-		font-size: 7rem;
-	}
-//	border-bottom: 6px solid magenta;
-}
-
-.maker-landing__pics {
-	grid-area: pics;
-	position: relative;
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: flex-end;
-	align-items: flex-start;
-	transform: translateY(50px);
-	img {
-		display: inline-block;
-		max-width: 90%;
-		&:nth-of-type(2) {
-			align-self: flex-end;
-		}
-	}
-}
-
-/* Main Content: */
-
-[class*="__title"][class*="maker-"] {
-	margin-bottom: .5em;
-	margin-top: 1em;
-	font-family: "Raleway", sans-serif;
-	font-size: 1.75rem;
-	font-weight: 900;
-	line-height: 1;
-	text-transform: uppercase;
-	@media screen and (min-width: 600px) {
-		font-size: 2rem;
-	}
-}
-
-/* Made with file-text-search.py: */
-
+// weird name so =/= caught by attr selector
 .maker-landing__big-title {
 	grid-area: title;
 	align-self: center;
@@ -134,8 +79,29 @@
 }
 
 .maker-landing__pics {
+	grid-area: pics;
+	position: relative;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: flex-end;
+	align-items: flex-start;
+	transform: translateY(50px);
+	img {
+		display: inline-block;
+		max-width: 90%;
+		&:nth-of-type(2) {
+			align-self: flex-end;
+		}
+	}
+}
+
+/* Main Content: */
+
+.makerspace-main-content {
 
 }
+
+/* Ethos: */
 
 .makerspace__ethos {
 
@@ -148,6 +114,8 @@
 .maker-ethos__text {
 
 }
+
+/* Hours: */
 
 .makerspace__hours {
 
@@ -165,6 +133,8 @@
 
 }
 
+/* People: */
+
 .makerspace__people {
 
 }
@@ -181,6 +151,8 @@
 
 }
 
+/* How To Use: */
+
 .makerspace__usage {
 
 }
@@ -192,6 +164,8 @@
 .maker-usage__content {
 
 }
+
+/* Inventory: */
 
 .makerspace__inventory {
 
@@ -213,6 +187,8 @@
 
 }
 
+/* Public Spaces: */
+
 .makerspace__public-spaces {
 
 }
@@ -225,6 +201,8 @@
 
 }
 
+/* Questions: */
+
 .makerspace__questions {
 
 }
@@ -233,6 +211,38 @@
 
 }
 
+/* Old Images: */
+
 .makerspace__images {
 	display: none;
 }
+
+/* 4. Unused Styles */
+
+/* If make into own for page:
+
+.home-makerspace__hours {
+	position: relative;
+	border: 4px solid magenta;
+	font-family: "base-mono-narrow", monospace;
+	font-size: 20px;
+	text-align: right;
+	margin-top: calc(2em + 4px);
+	padding: .5em 1em;
+	div {
+		position: absolute;
+		font-family: "Oswald", sans-serif;
+		font-size: 1.5rem;
+		font-weight: 600;
+		text-transform: uppercase;
+		text-align: left;
+		line-height: 1;
+		transform: translate(-1em, calc(-1.5em - 4px));
+	}
+	span {
+		float: left;
+		color: magenta;
+	}
+}
+
+*/
