--- a/theme-testing/_sass/_makerspace.scss
+++ b/theme-testing/_sass/_makerspace.scss
@@ -31,17 +31,15 @@
 .makerspace-landing-grid {
 	position: relative;
 	display: grid;
-	grid-template-areas: "title title"
-						 "..... pics";
+	grid-template-areas: "title pics";
 	grid-template-columns: 2fr 1fr;
 	grid-auto-rows: minmax(100vh, auto);
-//	justify-content: start;
-	align-items: center;
-//	overflow: hidden;
+	align-items: end;
+	overflow: hidden;
 	width: 100%;
 	padding-left: 4.167%;
-	margin-bottom: 50px;
 	background-color: black;
+	background-image: linear-gradient(to bottom, black, black 100vh, white 100vh, white);
 	@media screen and (min-width: 600px) {
 		padding-left: 8.33%;
 	}
@@ -50,13 +48,15 @@
 	}
 }
 
-// weird name so =/= caught by attr selector
+// 'big-' prefix so =/= caught by title selector
 .maker-landing__big-title {
 	grid-area: title;
-	align-self: center;
-	position: -webkit-sticky;
-	position: sticky;
-	top: 50vh;
+	align-self: start;
+	position: relative;
+	display: grid;
+	align-items: center;
+	justify-content: start;
+	height: 100vh;
 	font-family: "Oswald", sans-serif;
 	font-size: 4rem;
 	font-weight: 600;
@@ -75,7 +75,13 @@
 }
 
 .maker-title__text {
-
+	&::after {
+		content: '';
+		display: block;
+		height: 4px;
+		width: 200%;
+		background-color: cyan;
+	}
 }
 
 .maker-landing__pics {
@@ -85,12 +91,27 @@
 	flex-flow: column nowrap;
 	justify-content: flex-end;
 	align-items: flex-start;
-	transform: translateY(50px);
+	margin-top: 60px; // topnav
 	img {
 		display: inline-block;
 		max-width: 90%;
 		&:nth-of-type(2) {
 			align-self: flex-end;
+		}
+	}
+	// dummy pics:
+	div {
+		height: 33vh;
+		width: 75%;
+		margin-bottom: 2rem;
+		background-color: black;
+		border: 3px solid magenta;
+		&:nth-of-type(2) {
+			align-self: flex-end;
+		}
+		&:nth-of-type(3) {
+			transform: translate(-25%, 0);
+			background-color: transparent;
 		}
 	}
 }
