--- a/theme-testing/_sass/_makerspace.scss
+++ b/theme-testing/_sass/_makerspace.scss
@@ -79,6 +79,7 @@
 		content: '';
 		display: block;
 		height: 4px;
+		/* NB: this is a magic number!! fix! */
 		width: 200%;
 		background-color: cyan;
 	}
