--- a/theme-testing/style.scss
+++ b/theme-testing/style.scss
@@ -79,22 +79,47 @@ body {
 	position: relative;
 	display: grid;
 	// do media query testing!!!
-	grid-template-columns: 1fr 1fr;
-	grid-template-areas: "hero hero"
-						 "faq contact"
-						 "faq hours"
-						 "grads floor"
-						 "make gis"
-						 "learn learn"
-						 "events events"
-						 "blog contact2"
-						 "blog listserv"						 
-						 "people projects"
-						 "origins origins"			 
-						 "charter colophon";
+	grid-template-columns: 1fr;
 	grid-auto-rows: minmax(25vh, auto);
+	grid-template-areas: "hero"
+						 "faq"
+						 "contact"
+						 "hours"
+						 "grads"
+						 "floor"
+						 "make"
+						 "gis"
+						 "learn"
+						 "events"
+						 "blog"
+						 "contact2"
+						 "listserv"
+						 "people"
+						 "projects"
+						 "origins"
+						 "charter"
+						 "colophon";
 	padding: 0 4.167%;
 	@media screen and (min-width: 600px) {
+		padding: 0 8.33%;
+	}
+	@media screen and (min-width: 768px) {
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas: "hero hero"
+							 "faq contact"
+							 "faq hours"
+							 "grads floor"
+							 "make gis"
+							 "learn learn"
+							 "events events"
+							 "blog contact2"
+							 "blog listserv"
+							 "people projects"
+							 "origins origins"
+							 "charter colophon";
+		padding: 0 4.167%;
+	}
+	@media screen and (min-width: 1200px) {
 		padding: 0 8.33%;
 	}
 }
@@ -367,9 +392,11 @@ body {
 
 .home__gis-corner {
 	grid-area: gis;
-	padding-left: 8.33%;
 	font-size: 18px;
 	line-height: 24px;
+	@media screen and (min-width: 768px) {
+		padding-left: 8.33%;
+	}
 }
 
 /* Starter kit corner: */
