--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -67,8 +67,8 @@
 .makerspace-landing-grid {
   position: relative;
   display: grid;
-  grid-template-areas: "title pics";
-  grid-template-columns: 2fr 1fr;
+  grid-template-areas: "title";
+  grid-template-columns: 1fr;
   grid-auto-rows: minmax(100vh, auto);
   align-items: end;
   overflow: hidden;
@@ -79,6 +79,13 @@
   @media screen and (min-width: 600px) {
     .makerspace-landing-grid {
       padding-left: 8.33%; } }
+  @media screen and (min-width: 768px) {
+    .makerspace-landing-grid {
+      grid-template-areas: "title pics";
+      grid-template-columns: 2fr 1fr; } }
+  @media screen and (min-width: 900px) {
+    .makerspace-landing-grid {
+      padding-left: 4.167%; } }
   @media screen and (min-width: 1200px) {
     .makerspace-landing-grid {
       padding-right: 4.167%; } }
@@ -100,7 +107,7 @@
   @media screen and (min-width: 600px) {
     .maker-landing__big-title {
       font-size: 5rem; } }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 900px) {
     .maker-landing__big-title {
       font-size: 6rem; } }
   @media screen and (min-width: 1024px) {
@@ -117,7 +124,7 @@
 .maker-landing__pics {
   grid-area: pics;
   position: relative;
-  display: flex;
+  display: none;
   flex-flow: column nowrap;
   justify-content: flex-end;
   align-items: flex-start;
@@ -138,6 +145,9 @@
     .maker-landing__pics div:nth-of-type(3) {
       transform: translate(-25%, 0);
       background-color: transparent; }
+  @media screen and (min-width: 768px) {
+    .maker-landing__pics {
+      display: flex; } }
 
 /* Main Content: */
 .makerspace-main-content {
