--- a/theme-testing/_sass/_makerspace.scss
+++ b/theme-testing/_sass/_makerspace.scss
@@ -244,18 +244,57 @@
 	grid-area: title;
 }
 
+// contains all sub-lists
 .maker-inventory__list {
 	grid-area: list;
-	display: flex;
-	flex-flow: row wrap;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	ul {
 		position: relative;
-		max-width: 25%;
+		padding: 1em;
+		margin-bottom: 1em;
+		margin-right: 1em;
+		border: 4px solid black;
 		span {
-			font-weight: 700;
+			display: inline-block;
+			margin-bottom: .5em;
+			font-weight: 600;
+			font-family: "Oswald";
+			line-height: 1.15;
 		}
 		li {
-
+			font-weight: 200;
+			font-family: "base-mono-narrow", monospace;
+			position: relative;
+			margin-bottom: .25em;
+		//	margin-left: .25em;
+			line-height: 1.25;
+			&::before {
+				content: '';
+				position: absolute;
+				top: .625em;
+				left: 0;
+				display: block;
+				height: 6px;
+				width: 6px;
+				transform: translate(-175%, -50%);
+				background-color: magenta;
+				border-radius: 50%;
+			}
+		}
+		&:nth-of-type(3n - 1) {
+			li {
+				&::before {
+					background-color: cyan;
+				}
+			}
+		}
+		&:nth-of-type(3n) {
+			li {
+				&::before {
+					background-color: rgba(0,47,255,1);
+				}
+			}
 		}
 	}
 }
