--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -193,13 +193,41 @@
 
 .maker-inventory__list {
   grid-area: list;
-  display: flex;
-  flex-flow: row wrap; }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
   .maker-inventory__list ul {
     position: relative;
-    max-width: 25%; }
+    padding: 1em;
+    margin-bottom: 1em;
+    margin-right: 1em;
+    border: 4px solid black; }
     .maker-inventory__list ul span {
-      font-weight: 700; }
+      display: inline-block;
+      margin-bottom: .5em;
+      font-weight: 600;
+      font-family: "Oswald";
+      line-height: 1.15; }
+    .maker-inventory__list ul li {
+      font-weight: 200;
+      font-family: "base-mono-narrow", monospace;
+      position: relative;
+      margin-bottom: .25em;
+      line-height: 1.25; }
+      .maker-inventory__list ul li::before {
+        content: '';
+        position: absolute;
+        top: .625em;
+        left: 0;
+        display: block;
+        height: 6px;
+        width: 6px;
+        transform: translate(-175%, -50%);
+        background-color: magenta;
+        border-radius: 50%; }
+    .maker-inventory__list ul:nth-of-type(3n - 1) li::before {
+      background-color: cyan; }
+    .maker-inventory__list ul:nth-of-type(3n) li::before {
+      background-color: #002fff; }
 
 .maker-inventory__rules {
   grid-area: notes; }
