--- a/theme-testing/style.css
+++ b/theme-testing/style.css
@@ -198,6 +198,8 @@
   .maker-inventory__list ul {
     position: relative;
     padding: 1em;
+    padding-right: .75em;
+    padding-left: 1.25em;
     margin-bottom: 1em;
     margin-right: 1em;
     border: 4px solid black; }
@@ -221,7 +223,7 @@
         display: block;
         height: 6px;
         width: 6px;
-        transform: translate(-175%, -50%);
+        transform: translate(-200%, -50%);
         background-color: magenta;
         border-radius: 50%; }
     .maker-inventory__list ul:nth-of-type(3n - 1) li::before {
