--- a/theme-testing/_sass/_makerspace.scss
+++ b/theme-testing/_sass/_makerspace.scss
@@ -247,15 +247,24 @@
 // contains all sub-lists
 .maker-inventory__list {
 	grid-area: list;
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+//	display: grid;
+//	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	-moz-columns: 250px;
+	-webkit-columns: 250px;
+	columns: 250px;
+//	-moz-column-gap: 0;
+//	-webkit-column-gap: 0;
+//	column-gap: 0; // default = 1em
 	ul {
+		-webkit-column-break-inside: avoid;
+        page-break-inside: avoid;
+        break-inside: avoid;
 		position: relative;
 		padding: 1em;
 		padding-right: .75em;
 		padding-left: 1.25em;
 		margin-bottom: 1em;
-		margin-right: 1em;
+		margin-right: .5em;
 		border: 4px solid black;
 		span {
 			display: inline-block;
